RESOLVED FIXED277968
`-renderedText` should not be empty for targeted elements resolved using compound selectors
https://bugs.webkit.org/show_bug.cgi?id=277968
Summary `-renderedText` should not be empty for targeted elements resolved using comp...
Wenson Hsieh
Reported 2024-08-12 12:43:21 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-12 12:43:50 PDT
Wenson Hsieh
Comment 2 2024-08-12 13:12:42 PDT
EWS
Comment 3 2024-08-13 06:58:11 PDT
Committed 282163@main (e002db6b59bb): <https://commits.webkit.org/282163@main> Reviewed commits have been landed. Closing PR #32055 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.